--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -112,9 +112,9 @@ QGroupBox::title {
      <property name="geometry">
       <rect>
        <x>60</x>
-       <y>290</y>
+       <y>300</y>
        <width>251</width>
-       <height>91</height>
+       <height>61</height>
       </rect>
      </property>
      <property name="title">
@@ -123,34 +123,8 @@ QGroupBox::title {
      <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
-        <x>20</x>
+        <x>30</x>
         <y>20</y>
-        <width>184</width>
-        <height>42</height>
-       </rect>
-      </property>
-      <layout class="QVBoxLayout" name="verticalLayout_3">
-       <item>
-        <widget class="QRadioButton" name="radioButton">
-         <property name="text">
-          <string>Make a new File</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QRadioButton" name="radioButton_2">
-         <property name="text">
-          <string>Add to the end of an Existing File</string>
-         </property>
-        </widget>
-       </item>
-      </layout>
-     </widget>
-     <widget class="QWidget" name="layoutWidget">
-      <property name="geometry">
-       <rect>
-        <x>40</x>
-        <y>60</y>
         <width>191</width>
         <height>31</height>
        </rect>
@@ -177,7 +151,7 @@ QGroupBox::title {
      <property name="geometry">
       <rect>
        <x>60</x>
-       <y>390</y>
+       <y>380</y>
        <width>201</width>
        <height>25</height>
       </rect>
@@ -469,9 +443,13 @@ background: rgb(245, 245, 245);
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
      </property>
     </widget>
+    <zorder>label_2</zorder>
+    <zorder>label</zorder>
+    <zorder>label_13</zorder>
+    <zorder>label_4</zorder>
+    <zorder>label_3</zorder>
     <zorder>selectTimeButton</zorder>
     <zorder>avgTimeWindow</zorder>
-    <zorder>layoutWidget</zorder>
     <zorder>layoutWidget</zorder>
     <zorder>layoutWidget</zorder>
     <zorder>layoutWidget</zorder>
